Add support for running tests under Java 9